<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FeiJi</string>
    <string name="hello_world">Hello world!</string>
    <string name="NewGame">无尽模式</string>
    <string name="Scores">排行榜</string>
    <string name="ExitGame">Exit Game</string>
    <string name="setting">设置</string>
    <string name="Return">返回</string>
    <string name="Login">登录</string>
    <string name="Return_Menu">返回菜单</string>
     <string name="restart">重新开始</string>
    <string name="FeiJiScore">飞机大战分数</string>
    <string name="feiji_pause">飞机大战</string>
    <string name="FeiJiScoreList">飞机大战分数排行榜</string>
    <string name="FeiJiGuanka">关卡模式</string>
    <string name="LevelUp">升级了！</string>
    <string name="abourt">关于</string>
    <string name="setting_music_style">声音主题</string>
    <string name="setting_music_on">游戏音乐 on</string>
    <string name="setting_music_off">游戏音乐 off</string>
    <string name="setting_sound_on">游戏音效 on</string>
    <string name="setting_sound_off">游戏音效 off</string>
    <string name="setting_bgflow_on">背景移动 on</string>
    <string name="setting_bgflow_off">背景移动 off</string>

    <string name="setting_Invincible_off">无敌模式 off</string>
    <string name="setting_Invincible_on">无敌模式 on</string>
    <string name="setting_select_bg">选择背景</string>

    <color name="black">#ff000000</color>
    <color name="gray">#7B797B</color>
    

</resources>